--- a/vuepractice/vue.htm
+++ b/vuepractice/vue.htm
@@ -9,6 +9,7 @@ Product App
 </head>
 <body>
 	<div class="nav-bar">
+		<p class="ti">Shopping app <br> (Anushka Mittal)</p>
 	</div>
 	<div id="app">
 		<div class="cart">
